Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase00_20.out

Parse error on line 1:
class MainClass {	int a;	public stati
------------------^
Expecting 'public'